--- a/Server Utilization Forecasting/Time Series Server Utility.ipynb
+++ b/Server Utilization Forecasting/Time Series Server Utility.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Usage Instructions - Time Series Server Utilization Forecasting\n",
     "\n",
-    "Server Utilization Forecasting enables enterprises to optimize server allocation and utilization by generating 30 days of forward forecast of server usage. This helps enterprises to plan their server allocation strategy across the cloud and on premise scenarios using historical data. It uses ensemble ML algorithms with automatic model selection. This solution performs automated model selection to apply the right model based on the input data, thereby providing consistent and better results\n"
+    "Server Utilization Forecasting enables enterprises to optimize server allocation and utilization by generating 30 days of forward forecast of server usage. This helps enterprises to plan their server allocation strategy across the cloud and on premise scenarios using historical data. It uses ensemble ML algorithms with automatic model selection. This solution performs automated model selection to apply the right model based on the input data, thereby providing consistent and better results.\n"
    ]
   },
   {
@@ -902,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
