--- a/Time Series Web Traffic Forecasting/Mphasis - Time Series Web Traffic Forecasting.ipynb
+++ b/Time Series Web Traffic Forecasting/Mphasis - Time Series Web Traffic Forecasting.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Time Series Server Utilization Forecasting\n",
+    "# Usage Instructions - Time Series Web Traffic Forecasting\n",
     "\n",
-    "Server Utilization Forecasting enables enterprises to optimize server allocation and utilization by generating 30 days of forward forecast of server usage. This helps enterprises to plan their server allocation strategy across the cloud and on premise scenarios using historical data. It uses ensemble ML algorithms with automatic model selection. This solution performs automated model selection to apply the right model based on the input data, thereby providing consistent and better results.\n"
+    "Web Traffic Forecasting enables enterprises to optimize web server allocation, scaling for instances, parallelise workload traffic and utilization by generating 30 days of forward forecast of web traffic data. This helps enterprises to plan their IT infrastructure strategy across the cloud and on premise scenarios. It facilitates seamless end user experience and satisfied customers. It uses ensemble ML algorithms with automatic model selection. This solution performs automated model selection to apply the right model based on the input data, thereby providing consistent and better results.\n"
    ]
   },
   {
@@ -604,10 +604,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "    \"ContentType\": \"text/csv; charset=utf-8\",\n",
-      "    \"InvokedProductionVariant\": \"AllTraffic\"\n",
-      "}\n"
+      "{\r\n",
+      "    \"ContentType\": \"text/csv; charset=utf-8\",\r\n",
+      "    \"InvokedProductionVariant\": \"AllTraffic\"\r\n",
+      "}\r\n"
      ]
     }
    ],
@@ -872,38 +872,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
-  },
-  "kubeflow_notebook": {
-   "autosnapshot": false,
-   "docker_image": "",
-   "experiment": {
-    "id": "",
-    "name": ""
-   },
-   "experiment_name": "",
-   "katib_metadata": {
-    "algorithm": {
-     "algorithmName": "grid"
-    },
-    "maxFailedTrialCount": 3,
-    "maxTrialCount": 12,
-    "objective": {
-     "objectiveMetricName": "",
-     "type": "minimize"
-    },
-    "parallelTrialCount": 3,
-    "parameters": []
-   },
-   "katib_run": false,
-   "pipeline_description": "",
-   "pipeline_name": "",
-   "snapshot_volumes": false,
-   "steps_defaults": [],
-   "volume_access_mode": "rwm",
-   "volumes": []
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -915,9 +886,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
