--- a/Persistent Disk Storage Forecasting/Persistent Disk Storage Forecasting.ipynb
+++ b/Persistent Disk Storage Forecasting/Persistent Disk Storage Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mphasis Persistent Disk Storage Forecasting\n",
+    "#Persistent Disk Storage Forecasting\n",
     "\n",
     "Persistent disk storage forecasting helps businesses assess their local disk storage utilization based on the historic usage pattern. This will provide businesses an understanding of their disk storage attached to their virtual machines which will help them manage their infrastructure better. It uses ensemble ML algorithms with automatic model selection algorithms. This solution provides consistent and better results due to its ensemble learning approach. This solution performs automated model selection to apply the right model based on the input data. "
    ]
