--- a/Cloud Compute Cost Forecasting/Cloud Compute Forecasting.ipynb
+++ b/Cloud Compute Cost Forecasting/Cloud Compute Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Mphasis Cloud Compute Cost Forecasting\n",
+    "#  Cloud Compute Cost Forecasting\n",
     "\n",
     "Mphasis cloud compute cost forecasting helps businesses assess the cost incurred from their cloud compute resource based on historic data. This will help businesses get some understanding of the potential cost for their vm instances, clusters, snapshots, etc. to help them better plan their compute resources. It uses ensemble ML algorithms with automatic model selection algorithms. This solution performs automated model selection to apply the right model based on the input data.\n"
    ]
