--- a/Cloud Database Cost Forecasting/Cloud-database-cost-forecasting.ipynb
+++ b/Cloud Database Cost Forecasting/Cloud-database-cost-forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Cloud Database cost forecasting\n",
+    "# Cloud Database cost forecasting\n",
     "\n",
     "Cloud Database Cost Forecasting generates 24 hours of forward forecast of database cost using historical data. This solution will help businesses to better optimize their on-cloud hosted database resources and foresee their cost fluctuations. It uses ensemble ML algorithms with automatic model selection algorithms. This solution provides consistent and better results due to its ensemble learning approach. This solution performs automated model selection to apply the right model based on the input data."
    ]
