--- a/Cloud Network Cost Forecasting/Cloud-network-cost-forecasting.ipynb
+++ b/Cloud Network Cost Forecasting/Cloud-network-cost-forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Cloud Network cost forecasting\n",
+    "#  Cloud Network cost forecasting\n",
     "\n",
     "Cloud Network Cost Forecasting generates 24 hours of forward forecast of network cost using historical data. This solution will help businesses to better optimize their on-cloud network resources and foresee their cost fluctuations. It uses ensemble ML algorithms with automatic model selection algorithms. This solution provides consistent and better results due to its ensemble learning approach. This solution performs automated model selection to apply the right model based on the input data."
    ]
