Update and rename Mphasis- Cloud Storage Forecasting.ipynb to  Cloud Storage Forecasting.ipynb

--- a/Cloud Storage Cost Forecasting/ Cloud Storage Forecasting.ipynb
+++ b/Cloud Storage Cost Forecasting/ Cloud Storage Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Mphasis Cloud Storage Cost Forecasting\n",
+    "#  Cloud Storage Cost Forecasting\n",
     "\n",
     "Mphasis cloud storage cost forecasting helps businesses assess the cost incurred from their cloud storage based on historic data. This will help businesses get some understanding of the potential cost for their cloud resources and help them plan better to manage storage services like S3 buckets, EC2 storage, Elastic Block Store, Amazon Glacier etc. it uses ensemble ML algorithms with automatic model selection algorithms. This solution performs automated model selection to apply the right model based on the input data.  \n"
    ]
