--- a/Operating Expenses Forecasting/Operating+Expense+Forecasting.ipynb
+++ b/Operating Expenses Forecasting/Operating+Expense+Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Operating Expense Forecasting\n",
+    "#  Operating Expense Forecasting\n",
     "\n",
     "Operating Expense Forecasting generates 30 weeks of forward forecast of the operating expense using historical data. It uses ensemble ML algorithms with automatic model selection algorithms. This solution provides consistent and better results due to its ensemble learning approach.\n",
     "This solution performs automated model selection to apply the right model based on the input data."
