--- a/Ticket Severity Forecasting/ Ticket Priority Forecasting.ipynb
+++ b/Ticket Severity Forecasting/ Ticket Priority Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Time Series Ticket Priority Forecasting\n",
+    "# Ticket Priority Forecasting\n",
     "\n",
     "Mphasis time series ticket forecasting helps businesses assess the number of tickets that can be generate at each priority level based on historic data. This will help businesses assess the human resource required to resolve the issues and allocate more people if necessary. It uses ensemble ML algorithms with automatic model selection algorithms. This solution provides consistent and better results due to its ensemble learning approach. This solution performs automated model selection to apply the right model based on the input data.  \n"
    ]
