--- a/Time Series Inventory Forecasting/Time Series Inventory Forecasting.ipynb
+++ b/Time Series Inventory Forecasting/Time Series Inventory Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Time Series Inventory Forecasting\n",
+    "# Time Series Inventory Forecasting\n",
     "\n",
     "Inventory Forecasting generates 30 months of forward forecast of the Inventory using historical data. It uses ensemble ML algorithms with automatic model selection algorithms. This solution provides consistent and better results due to its ensemble learning approach.\n",
     "This solution performs automated model selection to apply the right model based on the input data.\n"
