Update Time Series Ticket Prediction.ipynb

--- a/Time Series Ticket Forecasting/Time Series Ticket Prediction.ipynb
+++ b/Time Series Ticket Forecasting/Time Series Ticket Prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Time Series Inventory Forecasting\n",
+    "# Time Series Time Series Ticket Forecasting\n",
     "\n",
     "Mphasis time series ticket forecasting helps businesses predict the number of tickets of a specific type based on historic data. This will help businesses assess the level of automation as well as human intervention required to resolve the issues and plan accordingly. It uses ensemble ML algorithms with automatic model selection algorithms. This solution provides consistent and better results due to its ensemble learning approach. This solution performs automated model selection to apply the right model based on the input data."
    ]
