Update and rename Mphasis - Time Series Web Traffic Forecasting.ipynb to Time Series Web Traffic Forecasting.ipynb

--- a/Time Series Web Traffic Forecasting/Time Series Web Traffic Forecasting.ipynb
+++ b/Time Series Web Traffic Forecasting/Time Series Web Traffic Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Time Series Web Traffic Forecasting\n",
+    "# Time Series Web Traffic Forecasting\n",
     "\n",
     "Web Traffic Forecasting enables enterprises to optimize web server allocation, scaling for instances, parallelise workload traffic and utilization by generating 30 days of forward forecast of web traffic data. This helps enterprises to plan their IT infrastructure strategy across the cloud and on premise scenarios. It facilitates seamless end user experience and satisfied customers. It uses ensemble ML algorithms with automatic model selection. This solution performs automated model selection to apply the right model based on the input data, thereby providing consistent and better results.\n"
    ]
