note books modified

--- a/Time Series Ticket Forecasting/Mphasis- Time Series Ticket Prediction.ipynb
+++ b/Time Series Ticket Forecasting/Mphasis- Time Series Ticket Prediction.ipynb
@@ -699,10 +699,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\r\n",
-      "    \"ContentType\": \"text/csv; charset=utf-8\",\r\n",
-      "    \"InvokedProductionVariant\": \"AllTraffic\"\r\n",
-      "}\r\n"
+      "{\n",
+      "    \"ContentType\": \"text/csv; charset=utf-8\",\n",
+      "    \"InvokedProductionVariant\": \"AllTraffic\"\n",
+      "}\n"
      ]
     }
    ],
@@ -964,9 +964,38 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
+  },
+  "kubeflow_notebook": {
+   "autosnapshot": false,
+   "docker_image": "",
+   "experiment": {
+    "id": "",
+    "name": ""
+   },
+   "experiment_name": "",
+   "katib_metadata": {
+    "algorithm": {
+     "algorithmName": "grid"
+    },
+    "maxFailedTrialCount": 3,
+    "maxTrialCount": 12,
+    "objective": {
+     "objectiveMetricName": "",
+     "type": "minimize"
+    },
+    "parallelTrialCount": 3,
+    "parameters": []
+   },
+   "katib_run": false,
+   "pipeline_description": "",
+   "pipeline_name": "",
+   "snapshot_volumes": false,
+   "steps_defaults": [],
+   "volume_access_mode": "rwm",
+   "volumes": []
   },
   "language_info": {
    "codemirror_mode": {
@@ -978,9 +1007,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
