--- a/Ticket Severity Forecasting/Time Series Ticket Priority Forecasting.ipynb
+++ b/Ticket Severity Forecasting/Time Series Ticket Priority Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Instructions - Time Series Ticket Priority Forecasting\n",
+    "# Time Series Ticket Priority Forecasting\n",
     "\n",
     "Time series ticket forecasting helps businesses assess the number of tickets that can be generate at each priority level based on historic data. This will help businesses assess the human resource required to resolve the issues and allocate more people if necessary. It uses VAR algorithms.  \n"
    ]
@@ -438,8 +438,8 @@
        "==================================\n",
        "Model:                         VAR\n",
        "Method:                        OLS\n",
-       "Date:           Tue, 23, Nov, 2021\n",
-       "Time:                     11:04:04\n",
+       "Date:           Wed, 24, Nov, 2021\n",
+       "Time:                     07:20:03\n",
        "--------------------------------------------------------------------\n",
        "No. of Equations:         3.00000    BIC:                   -138.501\n",
        "Nobs:                     25.0000    HQIC:                  -141.777\n",
@@ -576,8 +576,7 @@
     "res = m.fit(10)\n",
     "\n",
     "res.summary()\n",
-    "\n",
-    "# Python\n"
+    "\n"
    ]
   },
   {
@@ -674,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
