--- a/Data Drift Detector for Time Series/Data Drift Detector for Time Series.ipynb
+++ b/Data Drift Detector for Time Series/Data Drift Detector for Time Series.ipynb
@@ -1157,10 +1157,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\r\n",
-      "    \"ContentType\": \"text/csv; charset=utf-8\",\r\n",
-      "    \"InvokedProductionVariant\": \"AllTraffic\"\r\n",
-      "}\r\n"
+      "{\n",
+      "    \"ContentType\": \"text/csv; charset=utf-8\",\n",
+      "    \"InvokedProductionVariant\": \"AllTraffic\"\n",
+      "}\n"
      ]
     }
    ],
@@ -2135,6 +2135,22 @@
    "language": "python",
    "name": "conda_python3"
   },
+  "kubeflow_notebook": {
+   "autosnapshot": false,
+   "docker_image": "",
+   "experiment": {
+    "id": "",
+    "name": ""
+   },
+   "experiment_name": "",
+   "katib_run": false,
+   "pipeline_description": "",
+   "pipeline_name": "",
+   "snapshot_volumes": false,
+   "steps_defaults": [],
+   "volume_access_mode": "rwm",
+   "volumes": []
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -2149,5 +2165,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
