--- a/Cloud Storage Cost Forecasting/ Cloud Storage Forecasting.ipynb
+++ b/Cloud Storage Cost Forecasting/ Cloud Storage Forecasting.ipynb
@@ -342,13 +342,7 @@
       "\u001b[34m/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
       "  % self.max_iter, ConvergenceWarning)\u001b[0m\n",
       "\u001b[35m/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
-      "  % self.max_iter, ConvergenceWarning)\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  % self.max_iter, ConvergenceWarning)\u001b[0m\n",
       "\u001b[34m/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
       "  % self.max_iter, ConvergenceWarning)\u001b[0m\n",
       "\u001b[35m/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
@@ -588,7 +582,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Invoking through Endpoint\n",
     "This is another way of deploying the model that provides results as real time inference. Here is a sample endpoint for reference"
@@ -709,10 +707,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\r\n",
-      "    \"ContentType\": \"text/csv; charset=utf-8\",\r\n",
-      "    \"InvokedProductionVariant\": \"AllTraffic\"\r\n",
-      "}\r\n"
+      "{\n",
+      "    \"ContentType\": \"text/csv; charset=utf-8\",\n",
+      "    \"InvokedProductionVariant\": \"AllTraffic\"\n",
+      "}\n"
      ]
     }
    ],
@@ -983,9 +981,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -997,9 +995,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
