--- a/InfraGraf Bandwidth Usage Forecasting/Bandwith Usage Forecasting.ipynb
+++ b/InfraGraf Bandwidth Usage Forecasting/Bandwith Usage Forecasting.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forecasting Bandwith Usage Forecasting\n",
+    "# Bandwith Usage Forecasting\n",
     "\n",
-    "Bandwith Usage helps businesses forecast their network usage. This will help businesses asses their network requirements and make better cost-efficient decision. It uses Prophet which is a procedure for forecasting time series data based on an additive model where non-linear trends are fit with yearly, weekly, and daily seasonality, plus holiday effects. It works best with time series that have strong seasonal effects and several seasons of historical data. Prophet is robust to missing data and shifts in the trend, and typically handles outliers well."
+    "Bandwith Usage Forecasting helps businesses forecast their network usage. This will help businesses asses their network requirements and make better cost-efficient decision. It uses Prophet which is a procedure for forecasting time series data based on an additive model where non-linear trends are fit with yearly, weekly, and daily seasonality, plus holiday effects. It works best with time series that have strong seasonal effects and several seasons of historical data. Prophet is robust to missing data and shifts in the trend, and typically handles outliers well."
    ]
   },
   {
