--- a/InfraGraf Network Traffic Forecasting/Network Traffic Forecasting.ipynb
+++ b/InfraGraf Network Traffic Forecasting/Network Traffic Forecasting.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Contents\n",
     "\n",
-    "1. Prequisites\n",
+    "1. Pre-requisites\n",
     "1. Data Dictionary\n",
     "1. Import Libraries\n",
     "1. Sample Input Data\n",
