--- a/Flight_Delay_Prediction/flight-delay-prediction.ipynb
+++ b/Flight_Delay_Prediction/flight-delay-prediction.ipynb
@@ -414,11 +414,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(predictions, columns=['delay_predictions']).to_csv('output.csv', index=None)"
+    "testdf[\"delay_predictions\"] = predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testdf.to_csv('output.csv', index=None)"
    ]
   },
   {
