--- a/Reduce 30-Day Readmissions Rate/notebook.ipynb
+++ b/Reduce 30-Day Readmissions Rate/notebook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"reduce-30-day-readmission-rate.jpg\" style=\"width: 1000px;\"/>"
+    "<img src=\"https://labblog.uofmhealth.org/sites/lab/files/2016-08/UMH_L_Hysterectomy1%401x.jpg\" style=\"width: 1000px;\"/>"
    ]
   },
   {
