--- a/Time Series Inventory Forecasting/Time Series Inventory Forecasting.ipynb
+++ b/Time Series Inventory Forecasting/Time Series Inventory Forecasting.ipynb
@@ -35,7 +35,7 @@
     "To run this algorithm you need to have install following packages:\n",
     "- \"pandas\" to read/save csv files.\n",
     "- \"pystan==2.19.1.1\"\n",
-    "- \"prophet\" to forcast data.\n",
+    "- \"prophet\" to forecast data.\n",
     "\n"
    ]
   },
