--- a/Anti-Money Laundering Activity Scoring/notebook.ipynb
+++ b/Anti-Money Laundering Activity Scoring/notebook.ipynb
@@ -13,7 +13,7 @@
    "id": "b08e3df0",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/katonic-dev/Katonic-ML-Marketplace/blob/master/Anti-Money%20Laundering%20Activity%20Scoring/money_laundering-img.jpg?raw=true\" style=\"width: 1000px;\"/>"
+    "<img src=\"https://github.com/katonic-dev/Katonic-ML-Marketplace/blob/master/Anti-Money%20Laundering%20Activity%20Scoring/money_laundering-img.jpg\" style=\"width: 1000px;\"/>"
    ]
   },
   {
