--- a/Reduce 30-Day Readmissions Rate/notebook.ipynb
+++ b/Reduce 30-Day Readmissions Rate/notebook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://labblog.uofmhealth.org/sites/lab/files/2016-08/UMH_L_Hysterectomy1%401x.jpg\" style=\"width: 1000px;\"/>"
+    "<img src=\"https://raw.githubusercontent.com/katonic-dev/Katonic-ML-Marketplace/master/Reduce%2030-Day%20Readmissions%20Rate/reduce-30-day-readmission-rate.jpg?token=AQS2G3KAUQWGAA7W2BJ3YO3BZ3R6S\" style=\"width: 1000px;\"/>"
    ]
   },
   {
