--- a/Fraudulent Claim Detection/notebook.ipynb
+++ b/Fraudulent Claim Detection/notebook.ipynb
@@ -13,7 +13,7 @@
    "id": "9e15f699",
    "metadata": {},
    "source": [
-    "![](fraud-claim-detection.jpg)"
+    "<img src=\"https://raw.githubusercontent.com/katonic-dev/Katonic-ML-Marketplace/master/Fraudulent%20Claim%20Detection/fraud-claim-detection.jpg?token=AQS2G3NHC7QXZU573HF3JALBZ3UQW\" style=\"width: 1000px;\"/>"
    ]
   },
   {
