--- a/Late Shipment (or Part Shortage) Prediction/notebook.ipynb
+++ b/Late Shipment (or Part Shortage) Prediction/notebook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](lates-shipment-prediction.jpg)"
+    "<img src=\"https://raw.githubusercontent.com/katonic-dev/Katonic-ML-Marketplace/master/Late%20Shipment%20(or%20Part%20Shortage)%20Prediction/lates-shipment-prediction.jpg?token=AQS2G3NQN3NJDZTFJSUK3CTBZ3VDC\" style=\"width: 1000px;\"/>"
    ]
   },
   {
