Update Absenteeism at Work Forecasting.ipynb

--- a/Absenteeism at Work Forecasting/Absenteeism at Work Forecasting.ipynb
+++ b/Absenteeism at Work Forecasting/Absenteeism at Work Forecasting.ipynb
@@ -23,7 +23,7 @@
     "1. Create Future Data\n",
     "1. Predict Future Datapoints\n",
     "1. Plot the DataFrame\n",
-    "1. Saving Forcast"
+    "1. Saving Forecast"
    ]
   },
   {
