--- a/Cloud Compute Cost Forecasting/Cloud Compute Cost Forecasting.ipynb
+++ b/Cloud Compute Cost Forecasting/Cloud Compute Cost Forecasting.ipynb
@@ -23,7 +23,7 @@
     "1. Create Future Data\n",
     "1. Predict Future Datapoints\n",
     "1. Plot the DataFrame\n",
-    "1. Saving Forcast"
+    "1. Saving Forecast"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "To run this algorithm you need to have install following packages:\n",
     "- \"pandas\" to read/save csv files.\n",
     "- \"pystan==2.19.1.1\"\n",
-    "- \"prophet\" to forcast data.\n",
+    "- \"prophet\" to forecast data.\n",
     "\n"
    ]
   },
