--- a/Cloud Network Cost Forecasting/Cloud Network cost forecasting.ipynb
+++ b/Cloud Network Cost Forecasting/Cloud Network cost forecasting.ipynb
@@ -23,7 +23,7 @@
     "1. Create Future Data\n",
     "1. Predict Future Datapoints\n",
     "1. Plot the DataFrame\n",
-    "1. Saving Forcast"
+    "1. Saving Forecast"
    ]
   },
   {
