Update Time Series Ticket Priority Forecasting.ipynb

--- a/Ticket Severity Forecasting/Time Series Ticket Priority Forecasting.ipynb
+++ b/Ticket Severity Forecasting/Time Series Ticket Priority Forecasting.ipynb
@@ -22,7 +22,7 @@
     "1. Create Model\n",
     "1. Predict Future Datapoints\n",
     "1. Plot the DataFrame\n",
-    "1. Saving Forcast"
+    "1. Saving Forecast"
    ]
   },
   {
@@ -34,7 +34,7 @@
     "To run this algorithm you need to have install following packages:\n",
     "- \"pandas\" to read/save csv files.\n",
     "- \"numpy\"\n",
-    "- \"statsmodels\" to forcast data.\n",
+    "- \"statsmodels\" to forecast data.\n",
     "\n"
    ]
   },
