Update Time Series Ticket Forecasting.ipynb

--- a/Time Series Ticket Forecasting/Time Series Ticket Forecasting.ipynb
+++ b/Time Series Ticket Forecasting/Time Series Ticket Forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time Series Ticket Forecasting\n",
+    "# Time Series Ticket Forecasting\n",
     "\n",
     "Time series ticket forecasting helps businesses predict the number of tickets of a specific type based on historic data. This will help businesses assess the level of automation as well as human intervention required to resolve the issues and plan accordingly. It uses Prophet which is a procedure for forecasting time series data based on an additive model where non-linear trends are fit with yearly, weekly, and daily seasonality, plus holiday effects. It works best with time series that have strong seasonal effects and several seasons of historical data. Prophet is robust to missing data and shifts in the trend, and typically handles outliers well."
    ]
