--- a/Yahoo Stock Price Prediction/yahoo_stock_inference.ipynb
+++ b/Yahoo Stock Price Prediction/yahoo_stock_inference.ipynb
@@ -19,14 +19,14 @@
    },
    "outputs": [],
    "source": [
-    "#import os\n",
-    "#os.system(\"pip install pystan==2.19.1.1 fbprophet==0.06\")\n",
-    "#os.system(\"pip install slack\")\n",
-    "#os.system(\"pip install slackclient\")\n",
-    "#os.system(\"pip install yfinance\")\n",
-    "#os.system(\"pip install yahoofinancials\")\n",
-    "#os.system(\"pip install statsmodels\")\n",
-    "#os.system(\"pip install sklearn\")"
+    "import os\n",
+    "os.system(\"pip install pystan==2.19.1.1 fbprophet==0.06\")\n",
+    "os.system(\"pip install slack\")\n",
+    "os.system(\"pip install slackclient\")\n",
+    "os.system(\"pip install yfinance\")\n",
+    "os.system(\"pip install yahoofinancials\")\n",
+    "os.system(\"pip install statsmodels\")\n",
+    "os.system(\"pip install sklearn\")"
    ]
   },
   {
