--- a/Yolov3 Object Detection/demo/Evaluate_Models-Pipeline.ipynb
+++ b/Yolov3 Object Detection/demo/Evaluate_Models-Pipeline.ipynb
@@ -13,8 +13,8 @@
     "import os \n",
     "\n",
     "os.system('pip install sklearn')\n",
-    "os.system('pip install opencv-python')\n",
-    "os.system('pip install tqdm')"
+    "os.system('pip install tqdm')\n",
+    "os.system('pip install opencv-python-headless==4.5.3.56')"
    ]
   },
   {
@@ -316,41 +316,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Requirements: \n",
-    "#### -To evaluate any model, bounding boxes of ground truths and predictions must be provided in seperate text files. \n",
-    "#### -The rows must be ordered by image ids\n",
-    "#### -Exact format format of the text files should be like this:\n",
-    "#### -image_id,class_id,bounding_box_coordinates(y1,x1,y2,x2). Example:\n",
-    "####  0,1,[216 400 656 644]\n",
-    "####  1,44,[319 672 837 978]\n",
-    "####  2,1,[435 150 670 250]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "###  ---**To obtain quick evaluations** on COCO groundtruths, all that is needed to be changed is \"preds.txt\" file in vallogs directory."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### 1) Set Directories to where you put your text files in. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -361,39 +326,12 @@
    "outputs": [],
    "source": [
     "train_dir=\"/kfs_private/\"\n",
-    "val_dir=\"/kfs_private/vallogs/\"\n",
+    "val_dir=\"/kfs_private/\"\n",
     "prediction_file=\"preds.txt\"\n",
     "gtruth_file=\"gt.txt\"\n",
     "val_set_size = 5000 # Total image numbers to be evaluated\n",
     "train_total_image=82080\n",
     "iou_threshold=0.5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "####  Class Names as in the original dataset. Default one is for COCO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### Text reading function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Read GT and Prediction files."
    ]
   },
   {
@@ -650,15 +588,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### Normalised Confusion Matrix"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -667,24 +596,6 @@
    "outputs": [],
    "source": [
     "percentage_plot_cfmatrix(cfmatrix3 ,class_names, iou_threshold)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Part that calculates Missed instances, false positives etc.:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "###  -Change Intersection of Union Threshold below"
    ]
   },
   {
@@ -6954,48 +6865,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### False Positives:\n",
-    "####  Detection on Background.\n",
-    "### False Negatives:\n",
-    "#### -Matched locally with GT, but wrong class prediction.\n",
-    "#### - Fails to detect the object. \n",
-    "### True Positive:\n",
-    "#### Matching the GT with correct class label.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### RECALL:\n",
-    "\n",
-    "####  TP/(TP+FN)\n",
-    "\n",
-    "\n",
-    "### Precision:\n",
-    "\n",
-    "### TP/(TP+FP)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### How different thresholds affects predictions:\n",
-    "#### Currently  IoU between 0.4-0.8"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -7150,13 +7019,13 @@
    "pipeline_name": "object-detection",
    "snapshot_volumes": false,
    "steps_defaults": [],
-   "storage_class_name": "rook-cephfs",
-   "volume_access_mode": "rwm",
+   "storage_class_name": "gp2",
+   "volume_access_mode": "rwo",
    "volumes": [
     {
      "annotations": [],
      "mount_point": "/kfs_private",
-     "name": "private-storage-3ea4",
+     "name": "private-storage-5e0e",
      "size": 1,
      "size_type": "Gi",
      "snapshot": false,
